Name:           Coil
Version:        0.0.1
License-file:   LISENCE
Author:		Tesla Hofstadter <teslahof@yahoo.com>
Maintainer:	Tesla Hofstadter <teslahof@yahoo.com>

build-type:     Simple

build-depends: 
 base    == 4.*,
 parsec  == 3.1.1

Executable:     coil

Main-Is:        Main.hs
hs-source-dirs: src
